--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,10 @@
   }
 }
 
+.cardwith {
+  width: 10%;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -103,7 +107,7 @@ hr:not([size]) {
   height: 1px;
 }
 
-h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1, p {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
