--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -236,11 +236,11 @@
   }
 
   .titulo{
-      font-size: 100px !important;
+      font-size: 200px !important;
   }
 
   .titulo:hover{
-      color: #35363a !important;
+      color: white !important;
       cursor: pointer;
       transition: 0.3s;
   }
