--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,9 +1,9 @@
 .nosotros{
-  margin-top: 98px;
+  margin-top: 90px;
 }
 
 .infoo{
-  background: linear-gradient(60deg, rgb(32, 128, 186) 0%, rgba(32,128,186,1) 100%);
+  background: linear-gradient(60deg, rgb(58, 166, 233) 0%, rgba(32,128,186,1) 100%);
     
 }
 
@@ -27,7 +27,15 @@
   }
 
   .wrapper {
-    height: 20vh;
+    height: 10vh;
+    /*This part is important for centering*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .wrapperr {
+    height: 10vh;
     /*This part is important for centering*/
     display: flex;
     align-items: center;
@@ -35,7 +43,7 @@
   }
   
   .typing-demo {
-    width: 22ch;
+    width: 15ch;
     animation: typing 2s steps(22), blink .5s step-end infinite alternate;
     white-space: nowrap;
     overflow: hidden;
@@ -44,6 +52,17 @@
     font-size: 2em;
   }
   
+  .typing-demos {
+    width: 19ch;
+    animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 2em;
+  }
+
+
   @keyframes typing {
     from {
       width: 0
@@ -55,3 +74,83 @@
       border-color: transparent
     }
   }
+
+
+  .comencemos {
+    --c: #1095c1;
+    line-height: 1.2em;
+    background: conic-gradient(from -135deg at 100% 50%, #fff 90deg, #0000 0) 0 var(--p, 0%), conic-gradient(from -135deg at 1.2em 50%, #0000 90deg, #fff 0) 100% var(--p, 0%), var(--c);
+    -webkit-background-clip: text;
+    background-clip: text;
+    background-size: var(--s, 0%) 200%;
+    background-repeat: no-repeat;
+    color: transparent;
+    position: relative;
+    transition: 0.4s ease-in, background-position 0s;
+  }
+  
+  .comencemos:before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    background: conic-gradient(from -135deg at 100% 50%, var(--c) 90deg, #0000 0) 0 var(--p, 0%), conic-gradient(from -135deg at 1.2em 50%, #0000 90deg, var(--c) 0) 100% var(--p, 0%);
+    background-size: inherit;
+    background-repeat: no-repeat;
+  }
+  
+  .comencemos:hover {
+    --p: 100%;
+    /* it should be .6em (1.2em/2) but we use a litte bigger to avoid gaps */
+    --s: calc(50% + .61em);
+    color: white !important;
+  }
+
+  
+  .comencemos {
+    
+    font-size: 3rem;
+    cursor: pointer;
+    padding: 0 0.07em;
+  }
+
+  .boton{
+    text-align: center;
+  }
+
+  .texto{
+    font-size: 2vh;
+  }
+
+
+  @media (max-width: 1200px) {
+    .typing-demo {
+      font-size:  2.0rem;
+    }
+    .wrapper{
+      margin-top: -50px;
+    }
+  
+  }
+
+  
+  @media (max-width: 1200px) {
+    .typing-demos {
+      font-size: 2.0rem;
+    }
+  }
+
+
+  @media (max-width: 900px) {
+    .typing-demos {
+      font-size: 1.8rem;
+    }
+
+  }
+
+  @media (max-width: 1600px){
+    .texto{
+      font-size: 1.5rem ;
+    }
+  }
+ 
